--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "socket.io-client": "^4.4.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
