--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-upload-client": "^16.0.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
